--- a/components/sass/style.scss
+++ b/components/sass/style.scss
@@ -14,4 +14,6 @@
 @import "modules/animate";
 @import "modules/owlCarousel";
 @import "modules/owlTheme";
+@import "modules/globalStyles";
+@import "modules/header";
 @import "modules/home";
