--- a/components/sass/_variables.scss
+++ b/components/sass/_variables.scss
@@ -5,8 +5,8 @@
 
 // COLORS VARIABLES
 $white: 			#ffffff;
-$bgGray: 	    	#ededed;
-$borderGray:		#d9d9d9;
+$bgGray: 	    	#eeeeee;
+$borderGray:		#eeeeee;
 $darkGray:			#4d4d4d;
 $lightGray:			#f5f5f5;
 $textColorDark:		#666666;
