--- a/components/sass/style.scss
+++ b/components/sass/style.scss
@@ -16,4 +16,5 @@
 @import "modules/owlTheme";
 @import "modules/globalStyles";
 @import "modules/header";
-@import "modules/home";
+@import "modules/nav";
+@import "modules/about";
