--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -89,7 +89,7 @@ body {
   font-family: "Roboto Slab", serif;
   font-size: 16px;
   font-weight: 400;
-  color: #ffffff;
+  color: #666666;
   padding: 40px 0;
   font-size: 14px;
   background: #eeeeee;
@@ -120,7 +120,7 @@ body * {
   transition-timing-function: ease in;
 }
 /* line 30, ../../../components/sass/_base.scss */
-body a, body button, body input {
+body a, body button, body input, body section.contactMe article.content form label textarea, section.contactMe article.content form label body textarea {
   text-decoration: none;
   -moz-transition-property: all;
   -o-transition-property: all;
@@ -141,47 +141,6 @@ body a, body button, body input {
   font-family: "FontAwesome";
 }
 
-/* line 41, ../../../components/sass/_base.scss */
-a.backToTop {
-  position: fixed;
-  bottom: 20px;
-  z-index: 20;
-  background: black;
-  text-decoration: none;
-  color: #ffffff;
-  text-align: center;
-  padding: 20px;
-  font-size: 18px;
-  display: none;
-  font-weight: normal;
-}
-@media (max-width: 768px) {
-  /* line 41, ../../../components/sass/_base.scss */
-  a.backToTop {
-    display: none !important;
-  }
-}
-/* line 58, ../../../components/sass/_base.scss */
-a.backToTop:hover {
-  background: black;
-}
-
-@media print {
-  /* line 65, ../../../components/sass/_base.scss */
-  .noPrint, .noPrint * {
-    display: none !important;
-  }
-}
-/* line 71, ../../../components/sass/_base.scss */
-img {
-  font-size: 0;
-  color: #ffffff;
-  max-width: 100%;
-  height: auto;
-  display: inline-block;
-  vertical-align: middle;
-}
-
 /* line 1, ../../../components/sass/_layout.scss */
 div.container {
   max-width: 960px;
@@ -196,7 +155,135 @@ div.container:after {
 }
 
 /* line 5, ../../../components/sass/_layout.scss */
+div.globalWrapper {
+  width: 82.85714%;
+  float: left;
+  margin-right: 2.85714%;
+  margin-left: 8.57143%;
+}
+
+/* line 10, ../../../components/sass/_layout.scss */
 header.mainHeader {
+  clear: both;
+  width: 100%;
+  float: left;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+/* line 14, ../../../components/sass/_layout.scss */
+section.about {
+  clear: both;
+  width: 100%;
+  float: left;
+  margin-left: 0;
+  margin-right: 0;
+}
+/* line 17, ../../../components/sass/_layout.scss */
+section.about article.content {
+  clear: both;
+  width: 100%;
+  float: left;
+  margin-left: 0;
+  margin-right: 0;
+}
+/* line 20, ../../../components/sass/_layout.scss */
+section.about article.content div.personalImage {
+  width: 27.58621%;
+  float: left;
+  margin-right: 3.44828%;
+}
+/* line 24, ../../../components/sass/_layout.scss */
+section.about article.content div.text {
+  width: 68.96552%;
+  float: right;
+  margin-right: 0;
+}
+
+/* line 30, ../../../components/sass/_layout.scss */
+section.portfolio {
+  clear: both;
+  width: 100%;
+  float: left;
+  margin-left: 0;
+  margin-right: 0;
+}
+/* line 33, ../../../components/sass/_layout.scss */
+section.portfolio article.content {
+  clear: both;
+  width: 100%;
+  float: left;
+  margin-left: 0;
+  margin-right: 0;
+}
+/* line 36, ../../../components/sass/_layout.scss */
+section.portfolio article.content div.project {
+  clear: both;
+  width: 100%;
+  float: left;
+  margin-left: 0;
+  margin-right: 0;
+}
+/* line 39, ../../../components/sass/_layout.scss */
+section.portfolio article.content div.project div.projectThumb {
+  width: 48.27586%;
+  float: left;
+  margin-right: 3.44828%;
+}
+/* line 43, ../../../components/sass/_layout.scss */
+section.portfolio article.content div.project div.projectDesc {
+  width: 48.27586%;
+  float: right;
+  margin-right: 0;
+}
+
+/* line 51, ../../../components/sass/_layout.scss */
+section.contactMe {
+  clear: both;
+  width: 100%;
+  float: left;
+  margin-left: 0;
+  margin-right: 0;
+}
+/* line 54, ../../../components/sass/_layout.scss */
+section.contactMe article.content {
+  clear: both;
+  width: 100%;
+  float: left;
+  margin-left: 0;
+  margin-right: 0;
+}
+/* line 57, ../../../components/sass/_layout.scss */
+section.contactMe article.content form {
+  clear: both;
+  width: 100%;
+  float: left;
+  margin-left: 0;
+  margin-right: 0;
+}
+/* line 60, ../../../components/sass/_layout.scss */
+section.contactMe article.content form label.name {
+  width: 48.27586%;
+  float: left;
+  margin-right: 3.44828%;
+}
+/* line 64, ../../../components/sass/_layout.scss */
+section.contactMe article.content form label.mail {
+  width: 48.27586%;
+  float: right;
+  margin-right: 0;
+}
+/* line 68, ../../../components/sass/_layout.scss */
+section.contactMe article.content form label.message, section.contactMe article.content form div.submit {
+  clear: both;
+  width: 100%;
+  float: left;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+/* line 75, ../../../components/sass/_layout.scss */
+footer {
   clear: both;
   width: 100%;
   float: left;
@@ -3473,7 +3560,56 @@ Copyright (c) 2015 Daniel Eden
 /* line 1, ../../../components/sass/modules/_globalStyles.scss */
 div.container {
   background: #ffffff;
-  padding: 0 80px;
+}
+
+@media print {
+  /* line 7, ../../../components/sass/modules/_globalStyles.scss */
+  .noPrint, .noPrint * {
+    display: none !important;
+  }
+}
+/* line 13, ../../../components/sass/modules/_globalStyles.scss */
+img {
+  font-size: 0;
+  color: #ffffff;
+  max-width: 100%;
+  height: auto;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+/* line 22, ../../../components/sass/modules/_globalStyles.scss */
+a.backToTop {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  z-index: 20;
+  background: none;
+  color: #ffffff;
+  width: 0;
+  height: 0;
+  border-top: 50px solid transparent;
+  border-bottom: 0px solid transparent;
+  border-right: 50px solid #ee733d;
+  display: none;
+}
+@media (max-width: 768px) {
+  /* line 22, ../../../components/sass/modules/_globalStyles.scss */
+  a.backToTop {
+    display: none !important;
+  }
+}
+/* line 40, ../../../components/sass/modules/_globalStyles.scss */
+a.backToTop:hover {
+  border-right-color: #0B519F;
+}
+/* line 44, ../../../components/sass/modules/_globalStyles.scss */
+a.backToTop i {
+  font-size: 18px;
+  position: absolute;
+  bottom: 0;
+  right: -40px;
+  font-size: 24px;
 }
 
 /* line 1, ../../../components/sass/modules/_header.scss */
@@ -3578,8 +3714,18 @@ nav.mainNav ul li a:hover:after, nav.mainNav ul li a:hover:before, nav.mainNav u
 /* line 1, ../../../components/sass/modules/_about.scss */
 section.about {
   margin-top: 40px;
+  border-bottom: solid 1px #eeeeee;
 }
-/* line 65, ../../../components/sass/_mixins.scss */
+/* line 17, ../../../components/sass/_mixins.scss */
+section.about:before, section.about:after {
+  content: " ";
+  display: table;
+}
+/* line 22, ../../../components/sass/_mixins.scss */
+section.about:after {
+  clear: both;
+}
+/* line 77, ../../../components/sass/_mixins.scss */
 section.about header.sectionHeader {
   width: 100%;
   margin-bottom: 40px;
@@ -3593,7 +3739,7 @@ section.about header.sectionHeader:before, section.about header.sectionHeader:af
 section.about header.sectionHeader:after {
   clear: both;
 }
-/* line 70, ../../../components/sass/_mixins.scss */
+/* line 81, ../../../components/sass/_mixins.scss */
 section.about header.sectionHeader h3 {
   font-family: "Roboto Slab", serif;
   font-size: 30px;
@@ -3601,7 +3747,7 @@ section.about header.sectionHeader h3 {
   color: #0B519F;
   text-align: center;
 }
-/* line 78, ../../../components/sass/_mixins.scss */
+/* line 88, ../../../components/sass/_mixins.scss */
 section.about header.sectionHeader hr {
   clear: both;
   width: 30px;
@@ -3611,6 +3757,363 @@ section.about header.sectionHeader hr {
   background: #ee733d;
   border: none;
   margin-top: 10px;
+}
+/* line 8, ../../../components/sass/modules/_about.scss */
+section.about article.content {
+  margin-bottom: 40px;
+}
+/* line 14, ../../../components/sass/modules/_about.scss */
+section.about article.content div.text p {
+  line-height: 2;
+}
+
+/* line 1, ../../../components/sass/modules/_portfolio.scss */
+section.portfolio {
+  margin-top: 40px;
+  border-bottom: solid 1px #eeeeee;
+}
+/* line 17, ../../../components/sass/_mixins.scss */
+section.portfolio:before, section.portfolio:after {
+  content: " ";
+  display: table;
+}
+/* line 22, ../../../components/sass/_mixins.scss */
+section.portfolio:after {
+  clear: both;
+}
+/* line 77, ../../../components/sass/_mixins.scss */
+section.portfolio header.sectionHeader {
+  width: 100%;
+  margin-bottom: 40px;
+}
+/* line 17, ../../../components/sass/_mixins.scss */
+section.portfolio header.sectionHeader:before, section.portfolio header.sectionHeader:after {
+  content: " ";
+  display: table;
+}
+/* line 22, ../../../components/sass/_mixins.scss */
+section.portfolio header.sectionHeader:after {
+  clear: both;
+}
+/* line 81, ../../../components/sass/_mixins.scss */
+section.portfolio header.sectionHeader h3 {
+  font-family: "Roboto Slab", serif;
+  font-size: 30px;
+  letter-spacing: 1px;
+  color: #0B519F;
+  text-align: center;
+}
+/* line 88, ../../../components/sass/_mixins.scss */
+section.portfolio header.sectionHeader hr {
+  clear: both;
+  width: 30px;
+  height: 1px;
+  display: block;
+  margin: auto;
+  background: #ee733d;
+  border: none;
+  margin-top: 10px;
+}
+/* line 8, ../../../components/sass/modules/_portfolio.scss */
+section.portfolio article.content {
+  margin-bottom: 40px;
+}
+/* line 11, ../../../components/sass/modules/_portfolio.scss */
+section.portfolio article.content div.project {
+  margin-top: 80px;
+}
+/* line 14, ../../../components/sass/modules/_portfolio.scss */
+section.portfolio article.content div.project:first-child {
+  margin-top: 0;
+}
+/* line 21, ../../../components/sass/modules/_portfolio.scss */
+section.portfolio article.content div.project div.projectDesc h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+/* line 26, ../../../components/sass/modules/_portfolio.scss */
+section.portfolio article.content div.project div.projectDesc p {
+  line-height: 2;
+  margin-bottom: 20px;
+}
+/* line 31, ../../../components/sass/modules/_portfolio.scss */
+section.portfolio article.content div.project div.projectDesc a.more {
+  background: none;
+  border: none;
+  width: 150px;
+  height: 35px;
+  display: block;
+  position: relative;
+  cursor: pointer;
+  float: right;
+}
+/* line 112, ../../../components/sass/_mixins.scss */
+section.portfolio article.content div.project div.projectDesc a.more:hover span.text {
+  color: #ee733d;
+}
+/* line 117, ../../../components/sass/_mixins.scss */
+section.portfolio article.content div.project div.projectDesc a.more:hover span.bg:before, section.portfolio article.content div.project div.projectDesc a.more:hover span.bg:after {
+  width: 50%;
+}
+/* line 124, ../../../components/sass/_mixins.scss */
+section.portfolio article.content div.project div.projectDesc a.more span.text {
+  text-transform: uppercase;
+  color: #ffffff;
+  letter-spacing: 2px;
+  position: relative;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  display: block;
+  text-align: center;
+  line-height: 35px;
+  font-family: "Roboto Slab", serif;
+  font-size: 14px;
+}
+/* line 139, ../../../components/sass/_mixins.scss */
+section.portfolio article.content div.project div.projectDesc a.more span.bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+  z-index: 1;
+  background: #ee733d;
+  border: solid 1px #ee733d;
+}
+/* line 150, ../../../components/sass/_mixins.scss */
+section.portfolio article.content div.project div.projectDesc a.more span.bg:before {
+  content: "";
+  position: absolute;
+  right: 50%;
+  height: 100%;
+  width: 0;
+  display: block;
+  background: #ffffff;
+  -moz-transition-property: all;
+  -o-transition-property: all;
+  -webkit-transition-property: all;
+  transition-property: all;
+  -moz-transition-duration: 0.3s;
+  -o-transition-duration: 0.3s;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -moz-transition-timing-function: ease in;
+  -o-transition-timing-function: ease in;
+  -webkit-transition-timing-function: ease in;
+  transition-timing-function: ease in;
+}
+/* line 163, ../../../components/sass/_mixins.scss */
+section.portfolio article.content div.project div.projectDesc a.more span.bg:after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  height: 100%;
+  width: 0;
+  display: block;
+  background: #ffffff;
+  -moz-transition-property: all;
+  -o-transition-property: all;
+  -webkit-transition-property: all;
+  transition-property: all;
+  -moz-transition-duration: 0.3s;
+  -o-transition-duration: 0.3s;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -moz-transition-timing-function: ease in;
+  -o-transition-timing-function: ease in;
+  -webkit-transition-timing-function: ease in;
+  transition-timing-function: ease in;
+}
+
+/* line 1, ../../../components/sass/modules/_contaceMe.scss */
+section.contactMe {
+  margin-top: 40px;
+  border-bottom: solid 1px #eeeeee;
+}
+/* line 17, ../../../components/sass/_mixins.scss */
+section.contactMe:before, section.contactMe:after {
+  content: " ";
+  display: table;
+}
+/* line 22, ../../../components/sass/_mixins.scss */
+section.contactMe:after {
+  clear: both;
+}
+/* line 77, ../../../components/sass/_mixins.scss */
+section.contactMe header.sectionHeader {
+  width: 100%;
+  margin-bottom: 40px;
+}
+/* line 17, ../../../components/sass/_mixins.scss */
+section.contactMe header.sectionHeader:before, section.contactMe header.sectionHeader:after {
+  content: " ";
+  display: table;
+}
+/* line 22, ../../../components/sass/_mixins.scss */
+section.contactMe header.sectionHeader:after {
+  clear: both;
+}
+/* line 81, ../../../components/sass/_mixins.scss */
+section.contactMe header.sectionHeader h3 {
+  font-family: "Roboto Slab", serif;
+  font-size: 30px;
+  letter-spacing: 1px;
+  color: #0B519F;
+  text-align: center;
+}
+/* line 88, ../../../components/sass/_mixins.scss */
+section.contactMe header.sectionHeader hr {
+  clear: both;
+  width: 30px;
+  height: 1px;
+  display: block;
+  margin: auto;
+  background: #ee733d;
+  border: none;
+  margin-top: 10px;
+}
+/* line 8, ../../../components/sass/modules/_contaceMe.scss */
+section.contactMe article.content {
+  margin-bottom: 40px;
+}
+/* line 12, ../../../components/sass/modules/_contaceMe.scss */
+section.contactMe article.content form label {
+  display: block;
+  margin-bottom: 20px;
+}
+/* line 16, ../../../components/sass/modules/_contaceMe.scss */
+section.contactMe article.content form label input, section.contactMe article.content form label textarea {
+  width: 100%;
+  border: solid 1px #eeeeee;
+  height: 40px;
+  line-height: 35px;
+  background: #fcfcfc;
+  padding: 0 20px;
+  outline: none;
+}
+/* line 25, ../../../components/sass/modules/_contaceMe.scss */
+section.contactMe article.content form label input:focus, section.contactMe article.content form label textarea:focus {
+  border-color: #ee733d;
+}
+/* line 30, ../../../components/sass/modules/_contaceMe.scss */
+section.contactMe article.content form label textarea {
+  height: 190px;
+  line-height: 2;
+  padding: 5px 20px;
+  resize: none;
+}
+/* line 40, ../../../components/sass/modules/_contaceMe.scss */
+section.contactMe article.content form div.submit button {
+  background: none;
+  border: none;
+  width: 150px;
+  height: 35px;
+  display: block;
+  position: relative;
+  cursor: pointer;
+  float: right;
+}
+/* line 112, ../../../components/sass/_mixins.scss */
+section.contactMe article.content form div.submit button:hover span.text {
+  color: #ee733d;
+}
+/* line 117, ../../../components/sass/_mixins.scss */
+section.contactMe article.content form div.submit button:hover span.bg:before, section.contactMe article.content form div.submit button:hover span.bg:after {
+  width: 50%;
+}
+/* line 124, ../../../components/sass/_mixins.scss */
+section.contactMe article.content form div.submit button span.text {
+  text-transform: uppercase;
+  color: #ffffff;
+  letter-spacing: 2px;
+  position: relative;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  display: block;
+  text-align: center;
+  line-height: 35px;
+  font-family: "Roboto Slab", serif;
+  font-size: 14px;
+}
+/* line 139, ../../../components/sass/_mixins.scss */
+section.contactMe article.content form div.submit button span.bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+  z-index: 1;
+  background: #ee733d;
+  border: solid 1px #ee733d;
+}
+/* line 150, ../../../components/sass/_mixins.scss */
+section.contactMe article.content form div.submit button span.bg:before {
+  content: "";
+  position: absolute;
+  right: 50%;
+  height: 100%;
+  width: 0;
+  display: block;
+  background: #ffffff;
+  -moz-transition-property: all;
+  -o-transition-property: all;
+  -webkit-transition-property: all;
+  transition-property: all;
+  -moz-transition-duration: 0.3s;
+  -o-transition-duration: 0.3s;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -moz-transition-timing-function: ease in;
+  -o-transition-timing-function: ease in;
+  -webkit-transition-timing-function: ease in;
+  transition-timing-function: ease in;
+}
+/* line 163, ../../../components/sass/_mixins.scss */
+section.contactMe article.content form div.submit button span.bg:after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  height: 100%;
+  width: 0;
+  display: block;
+  background: #ffffff;
+  -moz-transition-property: all;
+  -o-transition-property: all;
+  -webkit-transition-property: all;
+  transition-property: all;
+  -moz-transition-duration: 0.3s;
+  -o-transition-duration: 0.3s;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -moz-transition-timing-function: ease in;
+  -o-transition-timing-function: ease in;
+  -webkit-transition-timing-function: ease in;
+  transition-timing-function: ease in;
+}
+
+/* line 1, ../../../components/sass/modules/_footer.scss */
+footer {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+/* line 17, ../../../components/sass/_mixins.scss */
+footer:before, footer:after {
+  content: " ";
+  display: table;
+}
+/* line 22, ../../../components/sass/_mixins.scss */
+footer:after {
+  clear: both;
+}
+/* line 6, ../../../components/sass/modules/_footer.scss */
+footer p {
+  text-align: center;
+  font-size: 12px;
+  color: #999999;
 }
 
 /*# sourceMappingURL=style.css.map */
