--- a/components/sass/_base.scss
+++ b/components/sass/_base.scss
@@ -12,7 +12,7 @@
 /* ================ GLOBAL STYLES ================ */
 body {
 	@include bodyFont;
-	color: $white;
+	color: $textColorDark;
 	@include clearfix;
     padding: 40px 0;
     font-size: 14px;
@@ -36,43 +36,4 @@ body {
 }
 .icon {
 	font-family: $iconFont;
-}
-
-a.backToTop {
-	position: fixed;
-	bottom: 20px;
-	z-index: 20;
-	background: black;
-	text-decoration: none;
-	color: $white;
-	text-align: center;
-	padding: 20px;
-	font-size: 18px;
-	display: none;
-	font-weight: normal;
-
-	@include breakpoint(max-width $phoneLandscape) {
-		display: none !important;
-	}
-
-	&:hover {
-		background: black;
-	}
-}//backToTop
-
-@media print
-{    
-    .noPrint, .noPrint *
-    {
-        display: none !important;
-    }
-}
-
-img {
-	font-size: 0;
-	color: $white;
-	max-width: 100%;
-	height: auto;
-	display: inline-block;
-	vertical-align: middle; 
 }
