--- a/components/sass/_mixins.scss
+++ b/components/sass/_mixins.scss
@@ -3,7 +3,7 @@
     height: 0;
     background: transparent;
     border: none;
-    display: none !important; 
+    display: none !important;
 }
 
 @mixin hideText {
@@ -14,59 +14,70 @@
 
 // This is to override the clearfix mixin
 @mixin clearfix {
-  &:before,
-  &:after {
-    content: " ";
-    display: table;
-  }
-  &:after {
-    clear: both;
-  }
+    &:before,
+    &:after {
+        content: " ";
+        display: table;
+    }
+    &:after {
+        clear: both;
+    }
 }
 
+
 /* === Calc Mixin ==== */
+
+
 /* ==== Usage example
 @include calc( width, '100% - 2px');
 ===================*/
+
 @mixin calc($property, $expression) {
-  #{$property}: -moz-calc(#{$expression});
-  #{$property}: -webkit-calc(#{$expression});
-  #{$property}: calc(#{$expression});
+    #{$property}: -moz-calc(#{$expression});
+    #{$property}: -webkit-calc(#{$expression});
+    #{$property}: calc(#{$expression});
 }
 
+
 /* This is to override the box-sizing mixin in compass so that the deprecated warning doesn't show */
+
 @mixin box-sizing($box-model: $default-box-sizing) {
-	@if type-of($box-model) == string {
-		$box-model: unquote($box-model);
-	}
-	@include prefixed-properties(css3-boxsizing, $box-sizing-support-threshold, (box-sizing: $box-model));
+    @if type-of($box-model)==string {
+        $box-model: unquote($box-model);
+    }
+    @include prefixed-properties(css3-boxsizing, $box-sizing-support-threshold, (box-sizing: $box-model));
 }
 
 @mixin backgroundImage($image, $size: initial, $horizontal: left, $vertical: top, $repeat: no-repeat) {
-	background-image: url("../images/" + $image);
-	background-size: $size;
-	background-position: $horizontal $vertical;
-	background-repeat: $repeat;
+    background-image: url("../images/" + $image);
+    background-size: $size;
+    background-position: $horizontal $vertical;
+    background-repeat: $repeat;
 }
 
-@mixin headingFont($font: $hFont, $size: 24, $weight: 100) {
+@mixin headingFont($font: $hFont,
+$size: 24,
+$weight: 100) {
     font-family: $font;
     font-size: $size + px;
     font-weight: $weight;
 }
 
-@mixin bodyFont($font: $bodyFont, $size: 16, $weight: 400) {
+@mixin bodyFont($font: $bodyFont,
+$size: 16,
+$weight: 400) {
     font-family: $font;
     font-size: $size + px;
     font-weight: $weight;
 }
 
-@mixin sectionHeader($font: $hFont, $size: 30px, $letterSpacing: 1px) {
+@mixin sectionHeader($font: $hFont,
+$size: 30px,
+$letterSpacing: 1px) {
     header.sectionHeader {
         width: 100%;
         margin-bottom: 40px;
         @include clearfix;
-
         h3 {
             font-family: $font;
             font-size: $size;
@@ -74,7 +85,6 @@
             color: $toryBlue;
             text-align: center;
         }
-
         hr {
             clear: both;
             width: 30px;
@@ -84,6 +94,83 @@
             background: $jaffa;
             border: none;
             margin-top: 10px;
+        }
+    }
+}
+
+@mixin buttonStyle() {
+    background: none;
+    border: none;
+    width: 150px;
+    height: 35px;
+    display: block;
+    position: relative;
+    cursor: pointer;
+    float: right;
+
+    &:hover {
+        span.text {
+            color: $jaffa;
+        }
+
+        span.bg {
+            &:before,
+            &:after {
+                width: 50%;
+            }
+        }
+    }
+
+    span.text {
+        text-transform: uppercase;
+        color: $white;
+        letter-spacing: 2px;
+        position: relative;
+        z-index: 2;
+        width: 100%;
+        height: 100%;
+        display: block;
+        text-align: center;
+        line-height: 35px;
+        font-family: $bodyFont;
+        font-size: 14px;
+    }
+
+    span.bg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: block;
+        z-index: 1;
+        background: $jaffa;
+        border: solid 1px $jaffa;
+
+        &:before {
+            content: "";
+            position: absolute;
+            right: 50%;
+            height: 100%;
+            width: 0;
+            display: block;
+            background: $white;
+            @include transition-property(all);
+            @include transition-duration(.3s);
+            @include transition-timing-function(ease in);
+        }
+
+        &:after {
+            content: "";
+            position: absolute;
+            left: 50%;
+            height: 100%;
+            width: 0;
+            display: block;
+            background: $white;
+            @include transition-property(all);
+            @include transition-duration(.3s);
+            @include transition-timing-function(ease in);
         }
     }
 }
