--- a/components/sass/style.scss
+++ b/components/sass/style.scss
@@ -18,3 +18,6 @@
 @import "modules/header";
 @import "modules/nav";
 @import "modules/about";
+@import "modules/portfolio";
+@import "modules/contaceMe";
+@import "modules/footer";
