--- a/components/sass/modules/_about.scss
+++ b/components/sass/modules/_about.scss
@@ -1,5 +1,5 @@
-section.about {
-    margin-top: 40px;
+section#about {
+    padding-top: 40px;
     border-bottom: solid 1px $borderGray;
     @include clearfix;
 
