--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -120,7 +120,7 @@ body * {
   transition-timing-function: ease in;
 }
 /* line 30, ../../../components/sass/_base.scss */
-body a, body button, body input, body section.contactMe article.content form label textarea, section.contactMe article.content form label body textarea {
+body a, body button, body input, body section#contactMe article.content form label textarea, section#contactMe article.content form label body textarea {
   text-decoration: none;
   -moz-transition-property: all;
   -o-transition-property: all;
@@ -172,7 +172,7 @@ header.mainHeader {
 }
 
 /* line 14, ../../../components/sass/_layout.scss */
-section.about {
+section#about {
   clear: both;
   width: 100%;
   float: left;
@@ -180,7 +180,7 @@ section.about {
   margin-right: 0;
 }
 /* line 17, ../../../components/sass/_layout.scss */
-section.about article.content {
+section#about article.content {
   clear: both;
   width: 100%;
   float: left;
@@ -188,20 +188,20 @@ section.about article.content {
   margin-right: 0;
 }
 /* line 20, ../../../components/sass/_layout.scss */
-section.about article.content div.personalImage {
+section#about article.content div.personalImage {
   width: 27.58621%;
   float: left;
   margin-right: 3.44828%;
 }
 /* line 24, ../../../components/sass/_layout.scss */
-section.about article.content div.text {
+section#about article.content div.text {
   width: 68.96552%;
   float: right;
   margin-right: 0;
 }
 
 /* line 30, ../../../components/sass/_layout.scss */
-section.portfolio {
+section#portfolio {
   clear: both;
   width: 100%;
   float: left;
@@ -209,7 +209,7 @@ section.portfolio {
   margin-right: 0;
 }
 /* line 33, ../../../components/sass/_layout.scss */
-section.portfolio article.content {
+section#portfolio article.content {
   clear: both;
   width: 100%;
   float: left;
@@ -217,7 +217,7 @@ section.portfolio article.content {
   margin-right: 0;
 }
 /* line 36, ../../../components/sass/_layout.scss */
-section.portfolio article.content div.project {
+section#portfolio article.content div.project {
   clear: both;
   width: 100%;
   float: left;
@@ -225,20 +225,20 @@ section.portfolio article.content div.project {
   margin-right: 0;
 }
 /* line 39, ../../../components/sass/_layout.scss */
-section.portfolio article.content div.project div.projectThumb {
+section#portfolio article.content div.project div.projectThumb {
   width: 48.27586%;
   float: left;
   margin-right: 3.44828%;
 }
 /* line 43, ../../../components/sass/_layout.scss */
-section.portfolio article.content div.project div.projectDesc {
+section#portfolio article.content div.project div.projectDesc {
   width: 48.27586%;
   float: right;
   margin-right: 0;
 }
 
 /* line 51, ../../../components/sass/_layout.scss */
-section.contactMe {
+section#contactMe {
   clear: both;
   width: 100%;
   float: left;
@@ -246,7 +246,7 @@ section.contactMe {
   margin-right: 0;
 }
 /* line 54, ../../../components/sass/_layout.scss */
-section.contactMe article.content {
+section#contactMe article.content {
   clear: both;
   width: 100%;
   float: left;
@@ -254,7 +254,7 @@ section.contactMe article.content {
   margin-right: 0;
 }
 /* line 57, ../../../components/sass/_layout.scss */
-section.contactMe article.content form {
+section#contactMe article.content form {
   clear: both;
   width: 100%;
   float: left;
@@ -262,19 +262,19 @@ section.contactMe article.content form {
   margin-right: 0;
 }
 /* line 60, ../../../components/sass/_layout.scss */
-section.contactMe article.content form label.name {
+section#contactMe article.content form label.name {
   width: 48.27586%;
   float: left;
   margin-right: 3.44828%;
 }
 /* line 64, ../../../components/sass/_layout.scss */
-section.contactMe article.content form label.mail {
+section#contactMe article.content form label.mail {
   width: 48.27586%;
   float: right;
   margin-right: 0;
 }
 /* line 68, ../../../components/sass/_layout.scss */
-section.contactMe article.content form label.message, section.contactMe article.content form div.submit {
+section#contactMe article.content form label.message, section#contactMe article.content form div.submit {
   clear: both;
   width: 100%;
   float: left;
@@ -3712,35 +3712,35 @@ nav.mainNav ul li a:hover:after, nav.mainNav ul li a:hover:before, nav.mainNav u
 }
 
 /* line 1, ../../../components/sass/modules/_about.scss */
-section.about {
-  margin-top: 40px;
+section#about {
+  padding-top: 40px;
   border-bottom: solid 1px #eeeeee;
 }
 /* line 17, ../../../components/sass/_mixins.scss */
-section.about:before, section.about:after {
+section#about:before, section#about:after {
   content: " ";
   display: table;
 }
 /* line 22, ../../../components/sass/_mixins.scss */
-section.about:after {
+section#about:after {
   clear: both;
 }
 /* line 77, ../../../components/sass/_mixins.scss */
-section.about header.sectionHeader {
+section#about header.sectionHeader {
   width: 100%;
   margin-bottom: 40px;
 }
 /* line 17, ../../../components/sass/_mixins.scss */
-section.about header.sectionHeader:before, section.about header.sectionHeader:after {
+section#about header.sectionHeader:before, section#about header.sectionHeader:after {
   content: " ";
   display: table;
 }
 /* line 22, ../../../components/sass/_mixins.scss */
-section.about header.sectionHeader:after {
+section#about header.sectionHeader:after {
   clear: both;
 }
 /* line 81, ../../../components/sass/_mixins.scss */
-section.about header.sectionHeader h3 {
+section#about header.sectionHeader h3 {
   font-family: "Roboto Slab", serif;
   font-size: 30px;
   letter-spacing: 1px;
@@ -3748,7 +3748,7 @@ section.about header.sectionHeader h3 {
   text-align: center;
 }
 /* line 88, ../../../components/sass/_mixins.scss */
-section.about header.sectionHeader hr {
+section#about header.sectionHeader hr {
   clear: both;
   width: 30px;
   height: 1px;
@@ -3759,44 +3759,44 @@ section.about header.sectionHeader hr {
   margin-top: 10px;
 }
 /* line 8, ../../../components/sass/modules/_about.scss */
-section.about article.content {
+section#about article.content {
   margin-bottom: 40px;
 }
 /* line 14, ../../../components/sass/modules/_about.scss */
-section.about article.content div.text p {
+section#about article.content div.text p {
   line-height: 2;
 }
 
 /* line 1, ../../../components/sass/modules/_portfolio.scss */
-section.portfolio {
-  margin-top: 40px;
+section#portfolio {
+  padding-top: 40px;
   border-bottom: solid 1px #eeeeee;
 }
 /* line 17, ../../../components/sass/_mixins.scss */
-section.portfolio:before, section.portfolio:after {
+section#portfolio:before, section#portfolio:after {
   content: " ";
   display: table;
 }
 /* line 22, ../../../components/sass/_mixins.scss */
-section.portfolio:after {
+section#portfolio:after {
   clear: both;
 }
 /* line 77, ../../../components/sass/_mixins.scss */
-section.portfolio header.sectionHeader {
+section#portfolio header.sectionHeader {
   width: 100%;
   margin-bottom: 40px;
 }
 /* line 17, ../../../components/sass/_mixins.scss */
-section.portfolio header.sectionHeader:before, section.portfolio header.sectionHeader:after {
+section#portfolio header.sectionHeader:before, section#portfolio header.sectionHeader:after {
   content: " ";
   display: table;
 }
 /* line 22, ../../../components/sass/_mixins.scss */
-section.portfolio header.sectionHeader:after {
+section#portfolio header.sectionHeader:after {
   clear: both;
 }
 /* line 81, ../../../components/sass/_mixins.scss */
-section.portfolio header.sectionHeader h3 {
+section#portfolio header.sectionHeader h3 {
   font-family: "Roboto Slab", serif;
   font-size: 30px;
   letter-spacing: 1px;
@@ -3804,7 +3804,7 @@ section.portfolio header.sectionHeader h3 {
   text-align: center;
 }
 /* line 88, ../../../components/sass/_mixins.scss */
-section.portfolio header.sectionHeader hr {
+section#portfolio header.sectionHeader hr {
   clear: both;
   width: 30px;
   height: 1px;
@@ -3815,29 +3815,29 @@ section.portfolio header.sectionHeader hr {
   margin-top: 10px;
 }
 /* line 8, ../../../components/sass/modules/_portfolio.scss */
-section.portfolio article.content {
+section#portfolio article.content {
   margin-bottom: 40px;
 }
 /* line 11, ../../../components/sass/modules/_portfolio.scss */
-section.portfolio article.content div.project {
+section#portfolio article.content div.project {
   margin-top: 80px;
 }
 /* line 14, ../../../components/sass/modules/_portfolio.scss */
-section.portfolio article.content div.project:first-child {
+section#portfolio article.content div.project:first-child {
   margin-top: 0;
 }
 /* line 21, ../../../components/sass/modules/_portfolio.scss */
-section.portfolio article.content div.project div.projectDesc h2 {
+section#portfolio article.content div.project div.projectDesc h2 {
   font-size: 24px;
   margin-bottom: 20px;
 }
 /* line 26, ../../../components/sass/modules/_portfolio.scss */
-section.portfolio article.content div.project div.projectDesc p {
+section#portfolio article.content div.project div.projectDesc p {
   line-height: 2;
   margin-bottom: 20px;
 }
 /* line 31, ../../../components/sass/modules/_portfolio.scss */
-section.portfolio article.content div.project div.projectDesc a.more {
+section#portfolio article.content div.project div.projectDesc a.more {
   background: none;
   border: none;
   width: 150px;
@@ -3848,15 +3848,15 @@ section.portfolio article.content div.project div.projectDesc a.more {
   float: right;
 }
 /* line 112, ../../../components/sass/_mixins.scss */
-section.portfolio article.content div.project div.projectDesc a.more:hover span.text {
+section#portfolio article.content div.project div.projectDesc a.more:hover span.text {
   color: #ee733d;
 }
 /* line 117, ../../../components/sass/_mixins.scss */
-section.portfolio article.content div.project div.projectDesc a.more:hover span.bg:before, section.portfolio article.content div.project div.projectDesc a.more:hover span.bg:after {
+section#portfolio article.content div.project div.projectDesc a.more:hover span.bg:before, section#portfolio article.content div.project div.projectDesc a.more:hover span.bg:after {
   width: 50%;
 }
 /* line 124, ../../../components/sass/_mixins.scss */
-section.portfolio article.content div.project div.projectDesc a.more span.text {
+section#portfolio article.content div.project div.projectDesc a.more span.text {
   text-transform: uppercase;
   color: #ffffff;
   letter-spacing: 2px;
@@ -3871,7 +3871,7 @@ section.portfolio article.content div.project div.projectDesc a.more span.text {
   font-size: 14px;
 }
 /* line 139, ../../../components/sass/_mixins.scss */
-section.portfolio article.content div.project div.projectDesc a.more span.bg {
+section#portfolio article.content div.project div.projectDesc a.more span.bg {
   position: absolute;
   top: 0;
   left: 0;
@@ -3883,7 +3883,7 @@ section.portfolio article.content div.project div.projectDesc a.more span.bg {
   border: solid 1px #ee733d;
 }
 /* line 150, ../../../components/sass/_mixins.scss */
-section.portfolio article.content div.project div.projectDesc a.more span.bg:before {
+section#portfolio article.content div.project div.projectDesc a.more span.bg:before {
   content: "";
   position: absolute;
   right: 50%;
@@ -3905,7 +3905,7 @@ section.portfolio article.content div.project div.projectDesc a.more span.bg:bef
   transition-timing-function: ease in;
 }
 /* line 163, ../../../components/sass/_mixins.scss */
-section.portfolio article.content div.project div.projectDesc a.more span.bg:after {
+section#portfolio article.content div.project div.projectDesc a.more span.bg:after {
   content: "";
   position: absolute;
   left: 50%;
@@ -3928,35 +3928,35 @@ section.portfolio article.content div.project div.projectDesc a.more span.bg:aft
 }
 
 /* line 1, ../../../components/sass/modules/_contaceMe.scss */
-section.contactMe {
-  margin-top: 40px;
+section#contactMe {
+  padding-top: 40px;
   border-bottom: solid 1px #eeeeee;
 }
 /* line 17, ../../../components/sass/_mixins.scss */
-section.contactMe:before, section.contactMe:after {
+section#contactMe:before, section#contactMe:after {
   content: " ";
   display: table;
 }
 /* line 22, ../../../components/sass/_mixins.scss */
-section.contactMe:after {
+section#contactMe:after {
   clear: both;
 }
 /* line 77, ../../../components/sass/_mixins.scss */
-section.contactMe header.sectionHeader {
+section#contactMe header.sectionHeader {
   width: 100%;
   margin-bottom: 40px;
 }
 /* line 17, ../../../components/sass/_mixins.scss */
-section.contactMe header.sectionHeader:before, section.contactMe header.sectionHeader:after {
+section#contactMe header.sectionHeader:before, section#contactMe header.sectionHeader:after {
   content: " ";
   display: table;
 }
 /* line 22, ../../../components/sass/_mixins.scss */
-section.contactMe header.sectionHeader:after {
+section#contactMe header.sectionHeader:after {
   clear: both;
 }
 /* line 81, ../../../components/sass/_mixins.scss */
-section.contactMe header.sectionHeader h3 {
+section#contactMe header.sectionHeader h3 {
   font-family: "Roboto Slab", serif;
   font-size: 30px;
   letter-spacing: 1px;
@@ -3964,7 +3964,7 @@ section.contactMe header.sectionHeader h3 {
   text-align: center;
 }
 /* line 88, ../../../components/sass/_mixins.scss */
-section.contactMe header.sectionHeader hr {
+section#contactMe header.sectionHeader hr {
   clear: both;
   width: 30px;
   height: 1px;
@@ -3975,16 +3975,16 @@ section.contactMe header.sectionHeader hr {
   margin-top: 10px;
 }
 /* line 8, ../../../components/sass/modules/_contaceMe.scss */
-section.contactMe article.content {
+section#contactMe article.content {
   margin-bottom: 40px;
 }
 /* line 12, ../../../components/sass/modules/_contaceMe.scss */
-section.contactMe article.content form label {
+section#contactMe article.content form label {
   display: block;
   margin-bottom: 20px;
 }
 /* line 16, ../../../components/sass/modules/_contaceMe.scss */
-section.contactMe article.content form label input, section.contactMe article.content form label textarea {
+section#contactMe article.content form label input, section#contactMe article.content form label textarea {
   width: 100%;
   border: solid 1px #eeeeee;
   height: 40px;
@@ -3994,18 +3994,18 @@ section.contactMe article.content form label input, section.contactMe article.co
   outline: none;
 }
 /* line 25, ../../../components/sass/modules/_contaceMe.scss */
-section.contactMe article.content form label input:focus, section.contactMe article.content form label textarea:focus {
+section#contactMe article.content form label input:focus, section#contactMe article.content form label textarea:focus {
   border-color: #ee733d;
 }
 /* line 30, ../../../components/sass/modules/_contaceMe.scss */
-section.contactMe article.content form label textarea {
+section#contactMe article.content form label textarea {
   height: 190px;
   line-height: 2;
   padding: 5px 20px;
   resize: none;
 }
 /* line 40, ../../../components/sass/modules/_contaceMe.scss */
-section.contactMe article.content form div.submit button {
+section#contactMe article.content form div.submit button {
   background: none;
   border: none;
   width: 150px;
@@ -4016,15 +4016,15 @@ section.contactMe article.content form div.submit button {
   float: right;
 }
 /* line 112, ../../../components/sass/_mixins.scss */
-section.contactMe article.content form div.submit button:hover span.text {
+section#contactMe article.content form div.submit button:hover span.text {
   color: #ee733d;
 }
 /* line 117, ../../../components/sass/_mixins.scss */
-section.contactMe article.content form div.submit button:hover span.bg:before, section.contactMe article.content form div.submit button:hover span.bg:after {
+section#contactMe article.content form div.submit button:hover span.bg:before, section#contactMe article.content form div.submit button:hover span.bg:after {
   width: 50%;
 }
 /* line 124, ../../../components/sass/_mixins.scss */
-section.contactMe article.content form div.submit button span.text {
+section#contactMe article.content form div.submit button span.text {
   text-transform: uppercase;
   color: #ffffff;
   letter-spacing: 2px;
@@ -4039,7 +4039,7 @@ section.contactMe article.content form div.submit button span.text {
   font-size: 14px;
 }
 /* line 139, ../../../components/sass/_mixins.scss */
-section.contactMe article.content form div.submit button span.bg {
+section#contactMe article.content form div.submit button span.bg {
   position: absolute;
   top: 0;
   left: 0;
@@ -4051,7 +4051,7 @@ section.contactMe article.content form div.submit button span.bg {
   border: solid 1px #ee733d;
 }
 /* line 150, ../../../components/sass/_mixins.scss */
-section.contactMe article.content form div.submit button span.bg:before {
+section#contactMe article.content form div.submit button span.bg:before {
   content: "";
   position: absolute;
   right: 50%;
@@ -4073,7 +4073,7 @@ section.contactMe article.content form div.submit button span.bg:before {
   transition-timing-function: ease in;
 }
 /* line 163, ../../../components/sass/_mixins.scss */
-section.contactMe article.content form div.submit button span.bg:after {
+section#contactMe article.content form div.submit button span.bg:after {
   content: "";
   position: absolute;
   left: 50%;
