--- a/components/sass/modules/_contaceMe.scss
+++ b/components/sass/modules/_contaceMe.scss
@@ -1,5 +1,5 @@
-section.contactMe {
-    margin-top: 40px;
+section#contactMe {
+    padding-top: 40px;
     border-bottom: solid 1px $borderGray;
     @include clearfix;
 
