--- a/components/sass/modules/_portfolio.scss
+++ b/components/sass/modules/_portfolio.scss
@@ -1,5 +1,5 @@
-section.portfolio {
-    margin-top: 40px;
+section#portfolio {
+    padding-top: 40px;
     border-bottom: solid 1px $borderGray;
     @include clearfix;
 
