--- a/components/sass/style.scss
+++ b/components/sass/style.scss
@@ -14,10 +14,12 @@
 @import "modules/animate";
 @import "modules/owlCarousel";
 @import "modules/owlTheme";
+@import "modules/magnificPopup";
 @import "modules/globalStyles";
 @import "modules/header";
 @import "modules/nav";
 @import "modules/about";
 @import "modules/portfolio";
 @import "modules/contaceMe";
+@import "modules/projectDetails";
 @import "modules/footer";
